# rusty-openweathermap

./: .gitignore  Cargo.toml  Feedback.md  LLM Propmts.md  Makefile.toml  README.md  Weather PRD.md  package-lock.json  package.json
src/: http_client.rs  lib.rs  main.rs  types.rs
src/location/: client.rs  mod.rs  types.rs  wasm.rs
src/wasm/: lib.rs  mod.rs
src/weather/: client.rs  mod.rs  types.rs
weather_cli/: Cargo.toml
weather_cli/src/: main.rs
weather_lib/src/weather/: types.rs
weather_web/: Cargo.toml  package-lock.json  package.json
weather_web/src/: lib.rs
weather_web/web-gui/: index.html  script.js  style.css
web-gui/: index.html  script.js  style.css
web-gui/public/: index.html
web-gui/src/css/: main.css
web-gui/src/js/: weather.js
