[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "weather-cli"
path = "src/main.rs"

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "serde-wasm-bindgen", "console_error_panic_hook"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15"
serde_json = "1.0.140"
urlencoding = "2.1"

# Native dependencies (not for WASM)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1.46.1", features = ["full"], optional = true }

# WASM dependencies - only included when wasm feature is enabled
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Native target dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.46.1", features = ["full"] }

# WASM target dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  "AbortController",
  "AbortSignal",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1"