[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "weather-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }

# Native target dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.46.1", features = ["full"] }
