[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "weather-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

# Native target dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.46.1", features = ["full"] }

# WASM target dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
reqwest = { version = "0.12", features = ["json"], default-features = false }
gloo-net = "0.5"